Fixed spacing

--- a/web/src/components/Chat/index.scss
+++ b/web/src/components/Chat/index.scss
@@ -15,6 +15,12 @@
     input {
         background: $dark;
         color: $white;
+        flex: 1;
+        border-radius: 0;
+    }
+
+    &__input {
+        display: flex;
     }
 
     &__message {
